Add more tests.